test/libsolidity/syntaxTests/inheritance/fallback_receive/fallback_without_override.sol
contract C {
	fallback() external {}
}
contract D is C {
	fallback() external {}
}
// ----
// TypeError: (58-80): Overriding function is missing 'override' specifier.
